Adding JWT Dependencies & JWT Service

--- a/FocusTrack_Backend/services/authservice/src/main/resources/application.yml
+++ b/FocusTrack_Backend/services/authservice/src/main/resources/application.yml
@@ -12,3 +12,7 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+  security:
+    jwt:
+      secret: 4n142B8+2hYkkpUpzXhhwdOMBILAUakj7mtNY2zCHT4=
+      expiration-ms: 86400000
